--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -1,1 +1,72 @@
 @charset "UTF-8";
+
+*{
+    margin: 0px;
+    padding: 0px;
+
+}
+
+html, body{
+min-height: 100vh;
+background-color: darkgray;
+}
+
+header{
+    background-color: black;
+    color: white;
+    text-align: center;
+}
+
+header > h1{
+    padding-top: 50px;
+    font-variant: small-caps;
+
+}
+
+header > p {
+    padding-bottom: 50px;
+
+}
+
+header a, footer a{
+    color: white;
+    text-decoration: none;
+    font-weight: bolder;
+
+}
+
+ header a:hover, foote a:hover{
+    text-decoration: underline;
+}
+
+section{
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    line-height: 2em;
+    padding-left: 30px;
+
+}
+
+section.normal{
+    background-color: white;
+    color: black;
+
+}
+
+section.imagem{
+    background-color: rgba(59, 54, 54, 0.425);
+    color: white;
+
+}
+
+section.imagem > p {
+background-color: rgb(109, 96, 96);
+width: 400px;
+}
+
+ footer{ 
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 10px;
+ }
