--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -1,34 +1,56 @@
 @charset "UTF-8";
 
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root{
+    
+    --fonte1: verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', sans-serif;
+    --fonte3:'Sriracha', cursive;
+
+}
+
 *{
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
 
 }
 
 html, body{
+
    min-height: 100vh;
    background-color: darkgray;
+   font-family: var(--fonte1);
 }
 
 header{
-    background-color: black;
-    color: white;
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     text-align: center;
 }
 
 header > h1{
+
     padding-top: 50px;
     font-variant: small-caps;
+    /* text-transform: uppercase; */
+    font-family: var(--fonte2);
+    font-size: 10vw;
 
 }
 
 header > p {
+
     padding-bottom: 50px;
 
 }
 
 header a, footer a{
+
     color: white;
     text-decoration: none;
     font-weight: bolder;
@@ -40,31 +62,42 @@ header a, footer a{
 }
 
 section{
+
     padding-top: 10vh;
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 3.5vw;
 
 }
 
 section.normal{
+
     background-color: white;
     color: black;
+    font-family: var(--fonte3);
 
 }
 
 section.imagem{
+
     background-color: rgba(59, 54, 54, 0.425);
     color: white;
+    font-family: var(--fonte3);
 
 }
 
 section.imagem > p {
+
     background-color: rgb(109, 96, 96);
-    width: 400px;
+   display: inline-block;
+   padding: 5px;
+    font-family: var(--fonte3);
 }
 
  footer{ 
+
     background-color: black;
     color: white;
     text-align: center;
