--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -39,7 +39,7 @@ header > h1{
     font-variant: small-caps;
     /* text-transform: uppercase; */
     font-family: var(--fonte2);
-    font-size: 10vw;
+    font-size: 10vw; /*viewport width 10% da largura da tela*/
 
 }
 
