--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -51,7 +51,7 @@ header > p {
 
 header a, footer a{
 
-    color: white;
+    color: rgb(255, 255, 255);
     text-decoration: none;
     font-weight: bolder;
 
@@ -74,8 +74,8 @@ section{
 
 section.normal{
 
-    background-color: white;
-    color: black;
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     font-family: var(--fonte3);
 
 }
@@ -83,7 +83,7 @@ section.normal{
 section.imagem{
 
     background-color: rgba(59, 54, 54, 0.425);
-    color: white;
+    color: rgb(255, 255, 255);
     font-family: var(--fonte3);
 
 }
@@ -98,8 +98,8 @@ section.imagem > p {
 
  footer{ 
 
-    background-color: black;
-    color: white;
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     text-align: center;
     padding: 10px;
  }
