--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -70,6 +70,9 @@ section{
     font-family: var(--fonte3);
     font-size: 3.5vw;
 
+} 
+section > p{
+    padding-bottom: 2em;
 }
 
 section.normal{
@@ -84,17 +87,32 @@ section.imagem{
 
     background-color: rgba(59, 54, 54, 0.425);
     color: rgb(255, 255, 255);
-    font-family: var(--fonte3);
+    /* font-family: var(--fonte3); */
+    box-shadow: inset 6px 6px 13px 0px black;
+    background-size: cover;
+    background-attachment: fixed; /*EFEITO PARALAX*/
 
 }
 
 section.imagem > p {
 
-    background-color: rgb(109, 96, 96);
+    background-color: rgba(0, 0, 0, 0.377);
     display: inline-block;
     padding: 5px;
-    font-family: var(--fonte3);
+    /* font-family: var(--fonte3); */
+    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.37);
+    
 }
+ section#img01{
+  background-image: url("../imagens/background001.jpg");
+  background-position: right center;
+  
+ }
+  section#img02{
+ background-image: url(../imagens/background002.jpg);
+ background-position: right center;
+ 
+  }
 
  footer{ 
 
